<resources>
    <string name="app_name">Donation</string>

    <string name="activity_login_name">Identifique-se</string>
    <string name="activity_change_password_name">Troque sua Senha</string>
    <string name="activity_simple_change_password_name">Trocar Senha</string>
    <string name="activity_join_name">Cadastre-se</string>
    <string name="activity_main_name">Dashboard</string>
    <string name="activity_new_group_name">Criar Grupo</string>
    <string name="activity_find_group_name">Localizar Grupo</string>
    <string name="activity_hide_bona_name">Esconder Bona</string>
    <string name="activity_view_bona_name">Visualizar Bona</string>
    <string name="activity_change_city_name">Alterar Cidade</string>
    <string name="activity_params">Parâmetros</string>
    <string name="activity_doadores">Doadores</string>
    <string name="activity_doador">Cadastro de Doador de Órgãos</string>
    <string name="activity_parente">Cadastro de Parente do Doador</string>
    <string name="activity_foto">Certidão de Doador de Órgãos</string>

    <string name="button_login">Identifique-se</string>
    <string name="button_change_password">Troque sua Senha</string>
    <string name="button_simple_change_password">Trocar Senha</string>
    <string name="button_join">Cadastre-se</string>
    <string name="button_retrieve_passasking">Recuperar Pergunta Pessoal</string>
    <string name="button_new_group">Criar Grupo</string>
    <string name="button_find_group">Localizar Grupo</string>
    <string name="button_meet">Unir-se ao Grupo</string>
    <string name="button_hide_bona">Esconder Bona</string>
    <string name="button_confirm_found_bona">Confirma Bona Encontrado</string>
    <string name="button_change_city">Alterar Cidade</string>
    <string name="button_indicar_parente">Indicar Parentes para Notificação</string>
    <string name="button_gerar_declaracao">Gerar PDF da Declaração</string>
    <string name="button_fotografar_declaracao">Fotografar Declaração Assinada</string>
    <string name="button_indicar_mais_parentes">Confirmar e Indicar Mais Parentes</string>
    <string name="button_indicar_so_esse_parente">Confirmar Esse e Não Indicar Outro</string>

    <string name="menu_new_group">Iniciar Novo Grupo</string>
    <string name="menu_find_group">Unir-se a um Grupo</string>
    <string name="menu_leave_group">Sair do Grupo</string>
    <string name="menu_change_password">Trocar Senha</string>
    <string name="menu_logout">Sair</string>

    <string name="hint_nickname">Apelido da conta</string>
    <string name="hint_fullname">Nome completo</string>
    <string name="hint_dateborn">Data de nascimento</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_password">Senha</string>
    <string name="hint_newpassword">Nova senha</string>
    <string name="hint_currentpassword">Senha atual</string>
    <string name="hint_repeat_password">Repetir senha</string>
    <string name="hint_repeat_newpassword">Repetir nova senha</string>
    <string name="hint_passasking">Qual pergunta só você sabe a resposta?</string>
    <string name="hint_passanswer">Resposta à pergunta pessoal</string>
    <string name="hint_shortname">Nome curto (max 30 car)</string>
    <string name="hint_longname">Nome longo (max 900 car)</string>
    <string name="hint_searchtext">Texto de busca</string>
    <string name="hint_denomination">Denominação</string>
    <string name="hint_specification">Especificação</string>
    <string name="hint_howmuch">Valor (Tii$)</string>
    <string name="hint_nome_doador">Nome</string>
    <string name="hint_rg_doador">RG</string>
    <string name="hint_cpf_doador">CPF</string>
    <string name="hint_nascimento_doador">Nascimento</string>
    <string name="hint_naturalidade_doador">Naturalidade</string>
    <string name="hint_nome_parente">Nome</string>
    <string name="hint_parentesco_parente">Grau de Parentesco</string>
    <string name="hint_endereco_parente">Endereço</string>
    <string name="hint_contato_parente">Contato</string>

    <string name="text_change_password">Se esqueceu sua senha:</string>
    <string name="text_join">Se sua conta ainda não está registrada:</string>
    <string name="text_fields_personalquestion">Infomação Pessoal - Usado apenas quando esquecer sua senha</string>
    <string name="text_fields_join">Tenha certeza que TODOS os 5 dados acima estão digitados corretamente. Pois esses dados da conta NÃO PODERÃO ser mais alterados depois.</string>

    <string name="google_maps_key_debug" templateMergeStrategy="preserve" translatable="false">AIzaSyDz25GKuwu9dTMBUZOPx7EkUeNbQFU9wS4</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAsXpadntJ711jrcMKCzfr5cYE1zdfFv5M</string>

</resources>
